# hidden-catch1

./: README.md
docs/: api-endpoints.md  sequence-diagrams.md
src/: docker-compose.yml
src/ai-image-workflow/: inpainting.py  main.py  rect3.py
src/backend/: .gitignore  Dockerfile  README.md  dump.rdb  pyproject.toml
src/backend/app/: celery_app.py  main.py
src/backend/app/api/v1/: router.py
src/backend/app/api/v1/endpoints/: games.py
src/backend/app/core/: config.py
src/backend/app/db/: base.py  session.py  utils.py
src/backend/app/models/: __init__.py  game.py  puzzle.py  upload_slot.py
src/backend/app/schemas/: game.py  puzzle.py  types.py
src/backend/app/services/: game_service.py  s3_service.py
src/backend/app/worker/: celery_app.py  detect.py  tasks.py
src/backend/app/worker/ai-image-workflow/: main.py  rect3.py
src/backend/migrations/: env.py
src/backend/migrations/versions/: 81d07d45b61d_add_upload_slot_analysis_fields.py  a1b2c3d4e5f6_add_is_completed_to_puzzle.py  b36d05d5a6f4_update_game_model.py  bac3c0e3b881_init_schema.py  c1f6b1f4c5de_add_stage_id_to_game_upload_slots.py
src/front/game-app/: .env.development  .env.production  README.md  package-lock.json
src/front/game-app/public/: index.html
src/front/game-app/src/: App.css  App.js
src/front/game-app/src/components/: GamePage.css  GamePage.js  Header.css  Header.js  HomePage.css  HomePage.js  ImageUploadPage.css  ImageUploadPage.js
src/infra/nginx/: Dockerfile  nginx.conf
